--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,37 +1,60 @@
-
-.calculator{
-    background-color: black;
+* {
+    padding: 0;
+    margin: 0;
 }
-input[text]{
-    color: white;
-    background-color: #24283B;
+body {
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #323232;
+    font-family: sans-serif;
 }
-button{
+.calculator {
+    width: 300px;
+    padding-bottom: 15px;
+    border-radius: 7px;
+    background-color: #242424;
+    box-shadow: 5px 8px 8px -2px rgba(0, 0, 0, 0.61);
+}
+.display {
+    width: 100%;
+    height: 80px;
+    border: none;
+    box-sizing: border-box;
+    padding: 10px;
+    font-size: 2rem;
+    background-color: #CB3633;
+    color: #000;
+    text-align: right;
+    border-top-left-radius: 7px;
+    border-top-right-radius: 7px;
+}
+.row {
+    display: flex;
+    justify-content: space-between;
+}
+button {
+    width: 50px;
+    height: 50px;
     border-radius: 50%;
-    border: 0px;
-    color: black;
+    border: none;
+    outline: none;
+    font-size: 1.5rem;
+    background-color: #222;
+    color: #fff;
+    margin: 10px;
 }
-button:hover{
-    color: white;
+button:hover {
+    cursor: pointer;
+}
+.operator {
+    background-color: #CB3633;
+    color: #000;
 }
 .number:hover{
-    background-color: rgb(4, 128, 182);
-}
-.nonumber{
-    background-color: rgb(26, 188, 156);
-}
-.nonumber:hover{
-    background-color: rgb(18, 137, 113);
-}
-.equal{
-    background-color: rgb(217, 58, 55);
-}
-.equal:hover{
-    background-color: rgb(165, 44, 42);
-}
-body{
-    background-color: #24283B;
-}
-h1{
-    color: white;
+    background-color: #fff;
+    color: #242424;
 }
